	* Fixed bug #14552: Path cache is not used in some cases
	* Fixed bug #14200: after logging out from BE realurl stops working on some pages
	* Fixed bug #14300: FileName option does not drop used parameters
	* Fixed bug #14321: If page title is empty, fall back to the uid of the page for path generation
	* Fixed bug #10073: If page title is empty, RealURL generates path to the upper page

2010-04-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14031: RealURL 1.8.0 floods sys_log with error messages: tx_realurl::encodeSpURL_urlPrepend is no valid callback
	* Fixed bug #13966: RealUrl uses t3lib_div::fixed_lgd() which is deprecated
	* Added a note to the manual that _DEFAULT must not be used in multidomain configurations
	* Recreate TCEmain hook to clean/expire path entries
	* Refactor and simplify insertion/updates in the path cache
	* Released version 1.8.1

2010-04-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed duplicate code

2010-04-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.8.0

2010-03-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13918: Autoconf breaks SimulateStatic-URLs

2010-03-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Small optimization for aliases
	* Fixed bug #6400: Unexpected behaviour when postVarsets => _DEFAULT is not set
	* Fixed bug #13721: No access to configuration in encodeTitle_userProc function from inside tx_realurl

2010-03-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10348: 301 Moved Permanently with redirects and redirects_regex
	* Fixed bug #12968: Set RealURL as conflicting with simulatestatic
	* Added PHP5 access specifiers to tx_realurl and tx_realurl_advanced

2010-03-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12919: Mistyping of a sql query 'expires' instead of 'expire'
	* Preparatory work for #9858: Making slash at the end ot the path configurable